--- a/notes-app-client/src/assets/style/index.css
+++ b/notes-app-client/src/assets/style/index.css
@@ -33,14 +33,23 @@
   src: url('../fonts/Oswald-VariableFont_wght.ttf'); 
 }
 
+:root{
+  --pink: #e11d48;
+  --lightGray:#e8e8e8
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 #root {
   max-width: 100%;
-  margin: 0 auto;
   min-height: 100vh;
 }
 
 body {
-  margin: 0;
   min-width: 100%;
   min-height: 100vh;
   height: 100%;
@@ -48,9 +57,9 @@ body {
   font-family: 'Poppins', sans-serif;
 }
 a.active {
-  color: #e11d48;
+  color: var(--pink);
   /* background-color: #374151; */
-  border-right: 2px solid #e11d48;
+  border-right: 2px solid var(--pink);
 }
 
 @layer components{
@@ -58,13 +67,13 @@ a.active {
     @apply h-screen w-full bg-[url('src/assets/images/notebook.jpg')] bg-no-repeat bg-cover p-6
   }
   .item{
-    @apply h-10 px-6 flex items-center font-semibold hover:text-[#e11d48] hover:border-r-2 hover:border-r-[#e11d48]
+    @apply h-10 px-6 flex items-center font-semibold hover:text-[var(--pink)] hover:border-r-2 hover:border-r-[var(--pink)]
   }
   .item span{
     @apply flex items-center w-full text-sm
   }
   .submit-btn{
-    @apply h-9 self-end rounded-md border-2 border-[#e11d48] bg-[#e11d48] px-3 text-white hover:bg-[#fb7185] hover:border-[#fb7185]
+    @apply h-9 self-end rounded-md border-2 border-[var(--pink)] bg-[var(--pink)] px-3 text-white hover:bg-[#fb7185] hover:border-[#fb7185]
   }
   .cancel-btn{
     @apply h-9 self-end rounded-md border-2 border-[#020617] px-3 py-1 bg-[#020617] text-white hover:bg-[#374151] hover:border-[#374151]
@@ -78,7 +87,7 @@ a.active {
  /* Select input   */
   .css-13cymwt-control {
     border-radius: 0.375rem !important;
-    border: 1px solid #e8e8e8 !important;
+    border: 1px solid var(--lightGray)!important;
     height:32px !important;
   }
   .css-tr4s17-option{
@@ -90,26 +99,26 @@ a.active {
     color:white !important;
   }
   .css-t3ipsp-control{
-    border-color :#e8e8e8 !important;
-    box-shadow: 0 0 0 1px #e8e8e8 !important;
+    border-color :var(--lightGray) !important;
+    box-shadow: 0 0 0 1px var(--lightGray) !important;
   }
   .css-t3ipsp-control:hover{
-    border-color :#e8e8e8 !important;
+    border-color :var(--lightGray) !important;
   }
 
    /* MultiSelect  */
 
   .css-13cymwt-control {
     border-radius: 0.375rem !important;
-    border: 1px solid #e8e8e8 !important;
+    border: 1px solid var(--lightGray) !important;
     height:32px !important;
   }
   .css-t3ipsp-control{
-    border-color :#e8e8e8 !important;
-    box-shadow: 0 0 0 1px #e8e8e8 !important;
+    border-color :var(--lightGray) !important;
+    box-shadow: 0 0 0 1px var(--lightGray) !important;
   }
   .css-t3ipsp-control:hover{
-    border-color :#e8e8e8 !important;
+    border-color :var(--lightGray) !important;
   }
 .css-1y7rh0y-MultiValueGeneric2 {
   color:white !important;
@@ -128,7 +137,7 @@ a.active {
 
  /* .css-13cymwt-control {
   border-radius: 0.375rem !important;
-  border: 1px solid #e8e8e8 !important;
+  border: 1px solid var(--lightGray) !important;
   height:32px !important;
 }
 .css-d7l1ni-option{
@@ -136,11 +145,11 @@ a.active {
   color:white !important;
 }
 .css-t3ipsp-control{
-  border-color :#e8e8e8 !important;
-  box-shadow: 0 0 0 1px #e8e8e8 !important;
+  border-color :var(--lightGray) !important;
+  box-shadow: 0 0 0 1px var(--lightGray) !important;
 }
 .css-t3ipsp-control:hover{
-  border-color :#e8e8e8 !important;
+  border-color :var(--lightGray) !important;
 }
 .css-1p3m7a8-multiValue{
 background-color: #020617 !important;
