--- a/notes-app-client/src/assets/style/loadingSpinner.css
+++ b/notes-app-client/src/assets/style/loadingSpinner.css
@@ -2,12 +2,15 @@
   0% { opacity: 1 }
   100% { opacity: 0 }
 }
+:root{
+  --BlueGray:#94a3b8
+}
 .ldio-o82wm6uiw div {
   left: 47px;
   top: 24px;
   position: absolute;
   animation: ldio-o82wm6uiw linear 1s infinite;
-  background: #94a3b8;
+  background: var(--BlueGray);
   width: 6px;
   height: 12px;
   border-radius: 3px / 6px;
@@ -16,62 +19,62 @@
 .ldio-o82wm6uiw div:nth-child(1) {
   transform: rotate(0deg);
   animation-delay: -0.9166666666666666s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(2) {
    transform: rotate(30deg);
    animation-delay: -0.8333333333333334s;
-   background: #94a3b8;
+   background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(3) {
   transform: rotate(60deg);
   animation-delay: -0.75s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(4) {
   transform: rotate(90deg);
   animation-delay: -0.6666666666666666s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(5) {
   transform: rotate(120deg);
   animation-delay: -0.5833333333333334s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(6) {
   transform: rotate(150deg);
   animation-delay: -0.5s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(7) {
   transform: rotate(180deg);
   animation-delay: -0.4166666666666667s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(8) {
   transform: rotate(210deg);
   animation-delay: -0.3333333333333333s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(9) {
   transform: rotate(240deg);
   animation-delay: -0.25s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(10) {
   transform: rotate(270deg);
   animation-delay: -0.16666666666666666s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(11) {
   transform: rotate(300deg);
   animation-delay: -0.08333333333333333s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .ldio-o82wm6uiw div:nth-child(12) {
   transform: rotate(330deg);
   animation-delay: 0s;
-  background: #94a3b8;
+  background: var(--BlueGray);
 }
 .loadingio-spinner-spinner-gfdyoi1q2y {
   width: 50px;
