--- a/notes-app-client/src/assets/style/index.css
+++ b/notes-app-client/src/assets/style/index.css
@@ -207,3 +207,31 @@ background-color: #020617 !important;
 color:white !important;
 } */
 
+/* flash message */
+.hidden-flash {
+  display: none;
+}
+.visible-flash {
+  display: flex;
+  align-items: center;
+  background-color: white;
+  padding: 10px 20px;
+  border-radius: 7px;
+  white-space: nowrap;
+  animation: fadeInRight 1s ease-in-out;
+}
+#flash-error {
+  color: #721c24;
+  background-color: #f8d7da;
+  border-color: #f5c6cb;
+}
+#flash-success {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
+@keyframes fadeInRight {
+  from {
+      transform: translateX(30%);
+  }
+}
